--- a/template/tests/CMakeLists.txt
+++ b/template/tests/CMakeLists.txt
@@ -23,7 +23,7 @@ foreach(LIB ${LIBLIST})
 endforeach()
 
 add_executable(${TEST_EXECUTABLE_NAME} ${TEST_SOURCES})
-target_link_libraries(${TEST_EXECUTABLE_NAME} VCA-SDK ${GTEST_LIBRARIES} ${OpenCV_LIBS} Threads::Threads ${LIBS})
+target_link_libraries(${TEST_EXECUTABLE_NAME} VCA-SDK ${GTEST_LIBRARIES} Threads::Threads ${LIBS})
 target_compile_definitions(${TEST_EXECUTABLE_NAME} PRIVATE TESTING)
 
 if(EXISTS ${PROJECT_SOURCE_DIR}/lib)
